--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>Index</title>
 
     <h1>Index page</h1>
+
+    <h4>This page is being run by KWS (Koda Web Server)</h4>
 </head>
 <body>
 
