--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Index</title>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <h1>Index page</h1>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
-    <h4>This page is being run by KWS (Koda Web Server)</h4>
+    <title>Architect Theme by Jason Long</title>
 </head>
+
 <body>
+<header>
+    <div class="inner">
+        <h1>Koda Web Server</h1>
+        <h2>Open Source Java Web Server</h2>
+        <a href="https://github.com/killerkoda13/JavaWebServer" class="button"><small>View project on</small> GitHub</a>
+    </div>
+</header>
+
+<div id="content-wrapper">
+    <div class="inner clearfix">
+        <section id="main-content">
+
+            <h1>Koda Web Server</h1>
+            <p>This was a project I did for fun to test my skills and challenge myself. This page is loaded using Koda Web Server running on my Home Server.</p>
+            <p> I have plans to implement CSS and image integration later on. Right now this is something Ive made in about 30 mins of bordem</p>
+
+
+        </section>
+
+        <aside id="sidebar">
+            <a href="https://github.com/killerkoda13/JavaWebServer/archive/master.zip" class="button">
+                <small>Download</small>
+                .zip file
+            </a>
+            <a href="https://github.com/killerkoda13/JavaWebServer/archive/master.tar.gz" class="button">
+                <small>Download</small>
+                .tar.gz file
+            </a>
+
+        </aside>
+    </div>
+</div>
 
 </body>
 </html>
